fix: Address overflow in comment list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,7 +122,7 @@ li.comment {
 }
 
 .child-flex {
-  max-width: 80%;
+  max-width: 50%;
 }
 
 .list-tight {
